--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ name = "pypi"
 
 [scripts]
 start = "pipenv run python manage.py runserver"
-makemigrate = "pipenv run python manage.py makemigrate"
+makemigrate = "pipenv run python manage.py makemigrations"
 migrate = "pipenv run python manage.py migrate"
 
 [packages]
