--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 start = "pipenv run python manage.py runserver"
 makemigrate = "pipenv run python manage.py makemigrations"
 migrate = "pipenv run python manage.py migrate"
+createsuperuser = "pipenv run python manage.py createsuperuser"
 
 [packages]
 django = "*"
