--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ djangorestframework = "*"
 django-filter = "*"
 django-cors-headers = "*"
 djangorestframework-simplejwt = "*"
+djoser = "*"
 
 [dev-packages]
 
