--- a/app/package.json
+++ b/app/package.json
@@ -2,5 +2,11 @@
     "main": "src/main.js",
     "devDependencies": {
         "tailwindcss": "^3.0.23"
+    },
+    "dependencies": {
+        "axios": "^0.26.0",
+        "electron-reload": "^2.0.0-alpha.1",
+        "electron-store": "^8.0.1",
+        "keytar": "^7.9.0"
     }
 }
