--- a/app/package.json
+++ b/app/package.json
@@ -2,5 +2,12 @@
     "main": "src/main.js",
     "devDependencies": {
         "tailwindcss": "^3.0.23"
+    },
+    "dependencies": {
+        "axios": "^0.26.0",
+        "dotenv": "^16.0.0",
+        "electron-store": "^8.0.1",
+        "express": "^4.17.3",
+        "keytar": "^7.9.0"
     }
 }
